LoydCrafts.WebSite/wwwroot/css/site.css
/* .reused-header is our custom built header for ReuseSU*/
.reuse-header {
    height: 100px;
    background-color: #aa0000;
    
}

.header-image {
    width: 100px;
    height: 100px;
    display: inline-block;
    float: left;
    margin-left: 58px;
}

.header-title {
    font-size: 64px;
    font-weight: bold;
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    text-shadow: -1px 0 floralwhite, 0 1px floralwhite, 1px 0 floralwhite, 0 -1px floralwhite;
    display: inline-block;
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0%);
}

.header-motto{
    float: right;
    font-style: italic;
    font-size: x-large;
    text-align: right;
    margin-top: 30px;
    margin-right: 10px;
}

.header-css{
    width: 1110px;
    margin-left: auto;
    margin-right: auto;
}

.reusesu-mod-title{
    font-size: 40px;
    font-weight: bold;
    text-align: center;
}

.modal-sub-title {
    margin-top: 5px;
    font-size: 20px;
    font-style: italic;
    text-align: center;
}

.reuse-mod-body{
    margin-tip: 10px;
    text-align: center;
    font-size: 24px;
    font-weight: 600;
}

.modal-body-items {
    text-size: 20px;
    display: table;
    width: auto;
    margin-right: auto;
    margin-left: auto;
}

.reusesu-table-row {
    display: table-row;
    width: auto;
    clear: both;
    padding-top: 150px;
}

.modal-body-img {
    text-align: right;
    padding-top: 15px;
    float: left;
    margin-right: 20px;
    width: 60px;
    display: table-column;
}

.modal-body-text {
    padding-top: 15px;
    font-size: 20px;
    float: left;
    display: table-column;
    width: auto;
}

.reusese-center {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.modal-what1{
    text-align: center;
    font-size: 36px;
    margin-top: 30px;
}

.modal-what2 {
    text-align: center;
    font-size: 24px;
    margin-top: 0px;
    font-style: italic;
}

.modal-buttons{
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    margin-top: 25px;
    margin-bottom: 15px;
}

.modal-button-container {
    display: inline-block;
}

.modal-button {
    width: 200px;
    margin: 5px 10px;
    background-color: #EEE;
}

.new-post-plus {
    display: inline-block;
    line-height: 40px;
    font-size: 56px;
    position: relative;
    left: 9%;
    top: 35%;
    transform: translate(-50%, -50%);
}

.new-post-afterplus {
    display: inline-block;
    line-height: 40px;
    font-size: x-large;
    position: relative;
    left: 25%;
    top: 18%;
    transform: translate(-50%, -50%);
}


.new-post {
    float: left;
    display: inline-block;
    font-weight: bold;
    width: 209px;
    height: 100%;
    text-align: center;
    border-right: 1px solid #CCC;
}

.search-bar {
    margin-top: 10px;
    margin-right: 10px;
    float: right;
    display: inline-block;
}

.search-input {
    float: right;
    margin-right: 10px;
    width: 665px;
    display: inline-block;
}

.search-button {
    float: right;
    margin-right: 10px;
    display: inline-block;
}

.sort-by{
    float:right;
    height: 30px;
}

.lower-sidebar-text {
    margin-left: 30px;
    margin-top: 10px;
    font-style: italic;
    font-weight: 600;
}

.checkbox{
    margin-left: 30px;
    margin-top: 5px;
}

.utility-bar {
    height: 50px;
    border: 1px solid #AA0000;
    border-bottom: 1px solid #CCC;
    border-left: 1px solid #CCC;
    border-right: 1px solid #CCC;
}

.sidebar {
    width: 210px;
    float: left;
}

.sidebar-upper {
    padding-top: 5px;
    padding-bottom: 5px;
    border-left: 1px solid #CCC;
    border-right: 1px solid #CCC;
    text-align: center;
}

.sidebar-upper-button {
    width: 150px;
    margin: 5px 10px;
    background-color: #EEE;
}

/*The bottom sidebar. Borders individually set so both the upper and the lower sidebar don't combine to form a 2px border between them.*/
.sidebar-lower {
    border: 1px solid #CCC;
    padding: 10px 0px;
}

.listing {
    border-radius: 10px;
    height: 122px;
    padding: 10px;
    width: 850px;
    float: right;
    background-color: #f7f7f7;
    border: 1px solid #CCC;
    margin-top: 20px;
}

.full-listing {
    border-radius: 10px;
    height: 600px;
    width: 850px;
    float: right;
    background-color: #f7f7f7;
    border: 1px solid #CCC;
    margin-top: 20px;
}

.full-listing-header {
    font-size: 9pt;
    margin-bottom: 5px;
    padding: 7px 0px 7px 20px;
    background-color: #fdfdfd;
    border-bottom: 1px solid #CCC;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.full-listing-image {
    margin: 10px auto 10px;
    display: block;
}

.listing-img {
    height: 100px;
    width: 100px;
    float: left;
    background-color: lightgray;
}

.listing-item-title {
    margin-left: 15px;
    margin-top: 10px;
    font-weight: bold;
    text-align:left;
    display: inline-block;
}

.listing-item-date-person {
    margin-top: 10px;
    text-align: right;
    margin-right: 15px;
    display: inline-block;
    font-size: small;
    font-style: italic;
}

.listing-item-text {
    margin-top: 35px;
    margin-left: 115px;
}

/* Create new post pages */
.create-post-header {
    font-size: 40px;
    text-align: center;
    font-weight: bold;
}

.create-post-subheader {
    font-size: 25px;
    font-weight: normal;
    display: inline-block;
    margin: 0 auto;
}

.create-post-body {
    border-radius: 40px;
    float: right;
    height: 800px;
    width: 825px;
    margin-left: 250px;
    margin-right: 50px;
    margin-top: 25px;
    background-color: lightgray;
    text-align: center;
}

.create-post-title {
    height: 50px;
    width: 825px;
    display: inline-block;
    padding: 20px;
    font-size: 35px;
}

.create-post-photo-section {
    margin: 25px 25px 25px 25px;
    width: 350px;
    height: 600px;
    background-color: aquamarine;
    float: left;
}

.create-post-text-section {
    margin: 25px 25px 25px 25px;
    width: 350px;
    height: 600px;
    background-color: cadetblue;
    float: left;
}


.create-post-component {
    font-size: 20px;
    font-weight: bold;
}

input[type="text"], textarea {
    background-color: #fff;
    color: #000;
    font-family: Arial;
    font-size: 16px;
}




/* Everything above this point added by ReuseSU prototype dev team */


.checked {
    color: orange;
}

.fa-star {
    cursor: pointer;
}

/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
for details on configuring this project to bundle and minify static web assets. */
.card-columns .card:hover .card-img {
    opacity: 1;
    -webkit-transform-style: preserve-3d;
}

.card-columns .card-body {
    height: 100px;
    font-family: 'Nunito', sans-serif;
    background: #fbfafd;
}

.card-columns .card-img {
    height: 330px;
    vertical-align: bottom;
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: cover; /* Resize the background image to cover the entire container */
    opacity: .8;
}

.modal .card-img {
    height: 500px;
    vertical-align: bottom;
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: cover; /* Resize the background image to cover the entire container */
}

.card-columns .card:hover {
    transform: scale(1.05);
    box-shadow: 0 10px 20px rgba(37,33,82,.12), 0 4px 8px rgba(37,33,82,.06);
}

.card-footer {
    background: #fbfafd;
}


a.navbar-brand {
    white-space: normal;
    font-family: 'Montserrat', sans-serif;
    /*font-family: 'Yellowtail', cursive;*/
    font-size: xx-large;
    text-align: center;
    word-break: break-all;
}

.bg-SURed{
    background-color: #AA0000;
}

/* Provide sufficient contrast against white background */
a {
    color: #0366d6;
}

.btn-primary {
    color: #fff;
    background-color: #252152;
    border-color: #252152;
}

    .btn-primary:hover {
        color: #fff;
        background-color: #e9a8a6;
        border-color: #e9a8a6;
    }

.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
    color: #fff;
    background-color: #1b6ec2;
    border-color: #1861ac;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
    font-size: 14px;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }
}

.border-top {
    border-top: 1px solid #e5e5e5;
}

.border-bottom {
    border-bottom: 1px solid #e5e5e5;
}

.box-shadow {
    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
}

button.accept-policy {
    font-size: 1rem;
    line-height: inherit;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
    position: relative;
    min-height: 100%;
}

body {
    /* Margin bottom by footer height */
    margin-bottom: 60px;
}

p {
    font-family: 'Nunito', sans-serif;
}

h1 {
    font-family: 'Nunito', sans-serif;
}

ul {
    font-family: 'Nunito', sans-serif;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    white-space: nowrap;
    line-height: 60px; /* Vertically center the text there */
    font-family: 'Nunito', sans-serif;
}
/*Backgrounds*/
.bg-navbar {
    background: -webkit-linear-gradient(110deg, #e9a8a6 60%, #252152 60%);
    background: -o-linear-gradient(110deg, #e9a8a6 60%, #252152 60%);
    background: -moz-linear-gradient(110deg, #e9a8a6 60%, #252152 60%);
    background: linear-gradient(110deg, #e9a8a6 60%, #252152 60%);
}

.bg-footer {
    background: -webkit-linear-gradient(110deg, #252152 60%, #e9a8a6 60%);
    background: -o-linear-gradient(110deg, #252152 60%, #e9a8a6 60%);
    background: -moz-linear-gradient(110deg, #252152 60%, #e9a8a6 60%);
    background: linear-gradient(110deg, #252152 60%, #e9a8a6 60%);
}

